# vocab-extension

./: .gitignore  README.md  REPORT.md  pipeline_config.yaml  pyproject.toml  run_pipeline.py
audio_component/: .gitignore  README.md  audio_generator.py  config.yaml  main.py  pyproject.toml  sample_input.json  sample_input_with_audio.json
audio_component/src/: __init__.py  audio_generator.py  io_utils.py
audio_component/tests/: test_audio_generator.py  test_io_utils.py
docs/: MACOS.md  prompt_for_speech_correction.md
docs/for_agent/: pipeline_debugging.md
flashcard_converter/: README.md  config.yaml  main.py  requirements.txt
flashcard_converter/data/: meta.json
integration_test/: test_config.yaml
meta_generator/: .gitignore  README.md  config.yaml  main.py  prompt.md  pyproject.toml
meta_generator/.github/: copilot-instructions.md
meta_generator/docs/: comprehensive_description.md
meta_generator/example/: README.md  config.yaml  config_nebius.yaml  example_input.json  example_output.json  prompt.md
meta_generator/src/: __init__.py
meta_generator/src/handler/: __init__.py  base_handler.py  generation_handler.py
meta_generator/src/model/: __init__.py  base_model.py  nebius_model.py  openai_model.py
meta_generator/src/processors/: __init__.py  base_processor.py  codeblock_extractor_processor.py  default_processor.py
meta_generator/src/prompter/: __init__.py  template_prompter.py
meta_generator/src/utils/: __init__.py  config.py  smart_format.py
meta_generator/src/validators/: __init__.py  base_validator.py  default_validator.py  json_response_validator.py
meta_generator/tests/: __init__.py  test_base_model.py  test_generation_handler.py  test_processors_validators.py  test_smart_format.py  test_template_prompter.py
meta_generator/tests/model/: __init__.py  test_base_model.py  test_openai_model.py
meta_generator/tests/utils/: test_config.py  test_smart_format.py
other/: README.md  dataset_convertor.py  remove_and_back_up_on_success.py
vocab_exploration/: README.md  audio_config.yaml  config.yaml  csv_to_json_with_context.py  flashcard_config.yaml  prompt.md
vocab_exploration/playground/: deck.json  draft.ipynb  words.csv  (+1 more)
word_saver_app/: BUILD_CAVEATS.md  README.md  main.py  pyproject.toml  setup.py
(+12 files in other folders)
