[tool.poetry]
name = "vocab-extension"
version = "0.1.0"
description = ""
authors = ["RodionfromHSE <rodionkhvorostov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ankiapi = "0.1.0"
tqdm = "^4.67.1"
omegaconf = "^2.3.0"
pyyaml = "^6.0.2"
gtts = "2.5.4"
pytest = "8.3.5"
retry = "0.9.2"
click = "8.1.8"
openai = "1.73.0"
jsonschema = "4.23.0"
python-dotenv = "^1.1.0"
boilerplate-tools = "0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
