[tool.poetry]
name = "audio-component"
version = "0.1.0"
description = ""
authors = ["RodionfromHSE <rodionkhvorostov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gtts = "^2.5.4"
omegaconf = "^2.3.0"
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
